--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^5.2.6",
+    "jsdom": "^16.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
