--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "npm": "^7.20.5",
+    "regenerator-runtime": "^0.13.9",
     "style-loader": "^2.0.0"
   },
   "devDependencies": {
